-If x-pid header not provided, try using the pid from the request before using the "shopstyle" pid. -Added a start script to support "npm start".

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "This proxy server allows to make authenticated API requests against shopstyle and CMS API servers",
   "main": "index.js",
+  "scripts": {
+    "start": "node ."
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/cristobalvergara/shopstyle-login-proxy.git"
